--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGODB_URI=mongodb+srv://kimmersion:jang6815@cluster0.cckt5sx.mongodb.net/korean-tutoring?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=kFs7!gP23p@Uz2Abcz!xn7%9sXeLzQwL
 EMAIL_USER=jangjoonyoung89@gmail.com
-EMAIL_PASS=wdez mehd lgws rgnx
+EMAIL_PASS=wdezmehdlgwsrgnx
 PORT=8000
+REACT_APP_API_URL=https://www.koreantutoring.co.kr
+FRONTEND_URL=http://localhost:3000
