--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ EMAIL_USER=jangjoonyoung89@gmail.com
 EMAIL_PASS=wdezmehdlgwsrgnx
 PORT=8000
 REACT_APP_API_URL=https://www.koreantutoring.co.kr
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://www.koreantutoring.co.kr
