--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+NODE_ENV=production
 MONGODB_URI=mongodb+srv://kimmersion:jang6815@cluster0.cckt5sx.mongodb.net/korean-tutoring?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=kFs7!gP23p@Uz2Abcz!xn7%9sXeLzQwL
 EMAIL_USER=jangjoonyoung89@gmail.com
@@ -5,3 +6,5 @@ EMAIL_PASS=wdezmehdlgwsrgnx
 PORT=8000
 REACT_APP_API_URL=https://www.koreantutoring.co.kr
 FRONTEND_URL=https://www.koreantutoring.co.kr
+CLIENT_URL=https://www.koreantutoring.co.kr
+ADMIN_EMAIL=jjy@mail.kcu.ac
